force-app/main/default/objects/Jobopening__c/fields/Job_description__c.field-meta.xml
<CustomField>
    <fullName>Job_description__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; CASESAFEID( RecruitmentRequest__r.JobDescription__r.Id )
, RecruitmentRequest__r.JobDescription__r.Name , &quot;_self&quot; )</formula>
    <label>Job Description</label>
    <type>Text</type>
</CustomField>