force-app/main/default/objects/Jobopening__c/fields/JobOpeningURL__c.field-meta.xml
<CustomField>
    <fullName>JobOpeningURL__c</fullName>
    <label>Job Opening URL</label>
    <type>Url</type>
</CustomField>