force-app/main/default/objects/Jobopening__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>RecruitmentRequest__r.Position__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>