force-app/main/default/objects/Jobopening__c/fields/Recruitmentchannel__c.field-meta.xml
<CustomField>
    <fullName>Recruitmentchannel__c</fullName>
    <label>Recruitment Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Recruitment_channel</valueSetName>
    </valueSet>
</CustomField>