force-app/main/default/objects/Jobopening__c/fields/RecruitmentRequest__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Request</label>
    <referenceTo>RecruitmentRequest__c</referenceTo>
    <relationshipLabel>Job Opening</relationshipLabel>
    <relationshipName>Job_Opening</relationshipName>
    <type>Lookup</type>
</CustomField>