force-app/main/default/objects/Jobopening__c/fields/Validationend__c.field-meta.xml
<CustomField>
    <fullName>Validationend__c</fullName>
    <defaultValue>today()+30</defaultValue>
    <label>Validation End</label>
    <type>Date</type>
</CustomField>