force-app/main/default/objects/Jobopening__c/fields/Validationstart__c.field-meta.xml
<CustomField>
    <fullName>Validationstart__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Validation Start</label>
    <type>Date</type>
</CustomField>