force-app/main/default/objects/Jobopening__c/recordTypes/Job_Listing.recordType-meta.xml
<RecordType>
    <fullName>Job_Listing</fullName>
    <active>true</active>
    <label>Job Listing</label>
</RecordType>